<resources>
    <string name="app_name">Score_Keeper</string>

        <string name="team1_score">0</string>
        <string name="team2_score">0</string>
        <string name="team1_title">Team 1</string>
        <string name="team2_title">Team 2</string>
        <string name="minus_button_description">Minus Button</string>
        <string name="plus_button_description">Plus Sign</string>
        <string name="night_mode">Night Mode</string>
        <string name="day_mode">Day Mode</string>
</resources>